--- a/src/web/CareLeavers.Web/Views/Shared/ServiceName.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/ServiceName.cshtml
@@ -1,10 +1,14 @@
 @model string
+@{
+    var languageCode = Context.Request.RouteValues["languageCode"]?.ToString() ?? "en";   
+}
+
 <section aria-label="Service information" class="govuk-service-navigation"
          data-module="govuk-service-navigation">
     <div class="govuk-width-container">
         <div class="govuk-service-navigation__container">
             <span class="govuk-service-navigation__service-name">
-                <a href="/" class="govuk-service-navigation__link">
+                <a href="/@languageCode/home" class="govuk-service-navigation__link">
                     @Model
                 </a>
             </span>
