--- a/src/web/CareLeavers.Web/Views/Shared/Grid/Card.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/Grid/Card.cshtml
@@ -4,6 +4,7 @@
 @inject IHttpContextAccessor HttpContextAccessor;
 @{
     var link = "";
+    var rel = "";
     var languageCode = HttpContextAccessor.HttpContext?.Request.RouteValues["languageCode"]?.ToString();
 
     switch (Model.Link)
@@ -13,9 +14,9 @@
             link = LinkGenerator.GetPathByAction("GetContent", "Contentful", values: new { slug, languageCode });
             break;
         case PrintableCollection pc:
-            var identifier = pc.Identifier ?? string.Empty;
+            var identifier = pc.Identifier;
             link = LinkGenerator.GetPathByAction("DownloadPdf", "Print", values: new { identifier, languageCode });
-
+            rel = "nofollow";
             break;
         
     }
@@ -29,7 +30,7 @@
     }
     <div class="dfe-card-container">
         <h3 class="govuk-heading-m">
-            <a href="@link" class="govuk-link govuk-link--no-visited-state dfe-card-link--header">
+            <a href="@link" class="govuk-link govuk-link--no-visited-state dfe-card-link--header" rel="@rel">
                 @Model.Title
             </a>
         </h3>
