Fixes https://dfedigital.atlassian.net/browse/CARE-1008

--- a/src/web/CareLeavers.Web/Views/Contentful/Page.cshtml
+++ b/src/web/CareLeavers.Web/Views/Contentful/Page.cshtml
@@ -65,6 +65,11 @@
         <meta name="description" content="@Model.SeoDescription"/>
     }
 
+    @if (Model.ExcludeFromSitemap)
+    {
+        <meta name="robots" content="noindex, nofollow"/>
+    }
+    
     <link rel="canonical" href="@Url.Action(
                                     action: "GetContent",
                                     controller: "Contentful",
