Updated external agency text size a little

--- a/src/web/CareLeavers.Web/Views/Shared/Grid/ExternalAgency.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/Grid/ExternalAgency.cshtml
@@ -8,7 +8,7 @@
         }
     </div>
     <div class="box-content">
-        <h3 class="govuk-heading-s">@Model.Name</h3>
+        <h3 class="govuk-heading-m">@Model.Name</h3>
         @if (Model.Content != null)
         {
             <gds-contentful-rich-text document="@Model.Content"/>
