--- a/src/web/CareLeavers.Web/Views/Shared/Shareaholic.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/Shareaholic.cshtml
@@ -13,9 +13,7 @@
         <div class="govuk-grid-row">
             <div class="metadata-logo-wrapper">
                 <div class="govuk-grid-column-two-thirds metadata-column">
-                    <div class="gem-c-print-link govuk-!-display-none-print govuk-!-margin-top-3 govuk-!-margin-bottom-8">
-                        <button class="govuk-link govuk-body-s gem-c-print-link__button" data-module="print-link" id="print-link">Print this page</button>
-                    </div>
+                    <partial name="PrintThisPage" model="@Model"/>
                 </div>
             </div>
         </div>
