--- a/src/web/CareLeavers.Web/Views/Shared/LastUpdated.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/LastUpdated.cshtml
@@ -8,7 +8,7 @@
 
     <div class="govuk-grid-row" id="last-updated">
         <div class="metadata-logo-wrapper">
-            <div class="govuk-grid-column-two-thirds metadata-column">
+            <div class="govuk-grid-column-full metadata-column">
                 <hr class="govuk-section-break govuk-section-break--visible">
                 <div class="gem-c-metadata" data-module="gem-toggle metadata">
                     <dl class="gem-c-metadata__list">
@@ -32,10 +32,7 @@
                         </dd>
                     </dl>
                 </div>
-                @if (Model.ShowShareLinks)
-                {
-                    <partial name="PrintThisPage" model="@Model"/>
-                }
+                <partial name="PrintThisPage" model="@Model"/>
             </div>
         </div>
     </div>
