Updated print js handler to only appear on pages with ShowPrintButton

--- a/src/web/CareLeavers.Web/Views/Contentful/Page.cshtml
+++ b/src/web/CareLeavers.Web/Views/Contentful/Page.cshtml
@@ -140,7 +140,7 @@
 
 @section Scripts
 {
-    @if (Model.ShowShareLinks)
+    @if (Model.ShowPrintButton)
     {
         <script asp-add-nonce="true" defer>
             const printPage  = () => window.print();
