--- a/src/web/CareLeavers.Web/Views/Shared/_Layout.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_Layout.cshtml
@@ -101,6 +101,9 @@
     @if (IsSectionDefined("Head")) {
         @await RenderSectionAsync("Head", required: false)
     }
+    
+    <meta name="google-site-verification" content="@config.GoogleSiteVerification"/>
+    <meta name="msvalidate.01" content="@config.BingSiteVerification"/>
 </head>
 
 <body class="govuk-template__body">
