--- a/src/web/CareLeavers.Web/Views/Shared/Navigation.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/Navigation.cshtml
@@ -13,7 +13,7 @@
     <div class="govuk-width-container">
         <div class="govuk-service-navigation__container">
             <span class="govuk-service-navigation__service-name">
-                <a href="@Url.ActionLink("GetContent", "Contentful", values: new { slug = Model.ContentfulConfiguration.HomePage?.Slug, languageCode})" class="govuk-service-navigation__link">
+                <a href="@Url.Action("GetContent", "Contentful", values: new { slug = Model.ContentfulConfiguration.HomePage?.Slug, languageCode})" class="govuk-service-navigation__link">
                     @Model.ContentfulConfiguration.ServiceName
                 </a>
             </span>
