Updated Riddle to stop auto-scrolling and defer loading as we'll always display the page

--- a/src/web/CareLeavers.Web/Views/Shared/Riddle.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/Riddle.cshtml
@@ -1,12 +1,14 @@
 @model CareLeavers.Web.Models.Content.Riddle
 
 <div class="riddle2-wrapper"
-     data-rid-id="@Model.RiddleId"
-     data-auto-scroll="true"
+     data-rid-id="Model.RiddleId"
+     data-auto-scroll="false"
      data-is-fixed-height-enabled="false"
      data-bg="#fff"
      data-fg="#00205b"
-     data-embed-url="https://www.riddle.com/embed/a/@Model.RiddleId?lazyImages=false&staticHeight=false">
+     style="margin:0 auto; max-width:100%; width:100%;">
     <script src="https://www.riddle.com/embed/build-embedjs/embedV2.js" asp-add-nonce="true"></script>
-    <iframe title="@Model.Title" allow="autoplay" referrerpolicy="strict-origin"></iframe>
+    <iframe title="@Model.Title" 
+            src="https://www.riddle.com/embed/a/@Model.RiddleId?lazyImages=false&staticHeight=false" 
+            allow="autoplay" referrerpolicy="strict-origin"></iframe>
 </div>
