--- a/src/web/CareLeavers.Web/Views/Shared/_Header.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_Header.cshtml
@@ -82,16 +82,31 @@
     </div>
 </div>
 
-<header class="dfe-header" role="banner">
-    <div class="dfe-width-container dfe-header__container">
-        <div class="dfe-header__logo">
-            <a class="dfe-header__link dfe-header__link--service " href="@Url.Action("GetContent", "Contentful", values: new { slug = Model.ContentfulConfiguration.HomePage?.Slug, languageCode})" aria-label="@Model.ContentfulConfiguration.ServiceName homepage">
-                <img src="~/assets/dfe-logo.png" class="dfe-logo" alt="@Model.ContentfulConfiguration.ServiceName homepage">
-                <img src="~/assets/dfe-logo-alt.png" class="dfe-logo-hover" alt="@Model.ContentfulConfiguration.ServiceName homepage">
-            </a>
+@if (SiteConfiguration.Rebrand)
+{
+    <header class="govuk-header" data-module="govuk-header">
+        <div class="govuk-header__container govuk-width-container">
+            <div class="govuk-header__logo">
+                <a class="govuk-header__link govuk-header__link--homepage" href="@Url.Action("GetContent", "Contentful", values: new { slug = Model.ContentfulConfiguration.HomePage?.Slug, languageCode })" aria-label="@Model.ContentfulConfiguration.ServiceName homepage">
+                    <img src="/assets/department-for-education_white.png" alt="@Model.ContentfulConfiguration.ServiceName homepage" class="govuk-header__logotype">
+                </a>
+            </div>
         </div>
-    </div>
-</header>
+    </header>
+}
+else
+{
+    <header class="dfe-header" role="banner">
+        <div class="dfe-width-container dfe-header__container">
+            <div class="dfe-header__logo">
+                <a class="dfe-header__link dfe-header__link--service " href="@Url.Action("GetContent", "Contentful", values: new { slug = Model.ContentfulConfiguration.HomePage?.Slug, languageCode })" aria-label="@Model.ContentfulConfiguration.ServiceName homepage">
+                    <img src="~/assets/dfe-logo.png" class="dfe-logo" alt="@Model.ContentfulConfiguration.ServiceName homepage">
+                    <img src="~/assets/dfe-logo-alt.png" class="dfe-logo-hover" alt="@Model.ContentfulConfiguration.ServiceName homepage">
+                </a>
+            </div>
+        </div>
+    </header>
+}
 @if (Model is { IsError: false, ShowNavigation: true })
 { 
     await Html.RenderPartialAsync("Navigation", Model);
