--- a/src/web/CareLeavers.Web/AssetSrc/scss/collection.scss
+++ b/src/web/CareLeavers.Web/AssetSrc/scss/collection.scss
@@ -37,6 +37,8 @@ table, tr, td, th, thead, tbody, tfoot, thead th {
   font-size: 9pt;
 }
 
+.govuk-footer, #main-content-footer { display: none !important; }
+
 #generated {
   position: running(generated);
   margin: 10pt 10pt 30pt 10pt;
@@ -46,6 +48,28 @@ table, tr, td, th, thead, tbody, tfoot, thead th {
 .dfe-header {
   padding: 0;
   background-color: #ffffff;
+}
+
+.govuk-template--rebranded {
+  .govuk-header {
+    background-color: #ffffff;
+  }
+
+  .govuk-header__link--homepage:not(:focus),
+  .govuk-header__link--homepage
+  {
+    background-color: #ffffff;
+  }
+
+  .govuk-header__link:not(:focus) .govuk-header__logotype,
+  .govuk-header__link:focus .govuk-header__logotype{
+    content: url(/assets/department-for-education_black.png);
+    height: 30px;
+  }
+}
+
+.gem-c-print-link {
+  display: none;
 }
 
 .dfe-header__link .dfe-logo {
@@ -233,4 +257,12 @@ p
   content: "";
   font-size: inherit;
   word-wrap: inherit;
+}
+
+.govuk-template--rebranded .govuk-footer {
+  display: none;
+}
+
+.govuk-template--rebranded {
+  background-color: inherit;
 }
