--- a/src/web/CareLeavers.Web/Views/Shared/_ErrorLayout.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_ErrorLayout.cshtml
@@ -1,4 +1,5 @@
-﻿@using CareLeavers.Web.Configuration
+﻿@using System.Globalization
+@using CareLeavers.Web.Configuration
 @using CareLeavers.Web.Models.Content
 @using CareLeavers.Web.Models.ViewModels
 @using Microsoft.AspNetCore.Mvc.TagHelpers
@@ -20,23 +21,43 @@
 }
 
 <!DOCTYPE html>
-<html class="govuk-template">
+<html class="@(SiteConfiguration.Rebrand ? "govuk-template--rebranded" : "govuk-template")" lang="en">
 
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>@ViewData["Title"]</title>
-
-    <link rel="icon" sizes="48x48" href="/assets/images/favicon.ico" asp-append-version="@scriptConfig.AddCssVersion"/>
-    <link rel="icon" sizes="any" type="image/svg+xml" href="/assets/images/favicon.svg" asp-append-version="@scriptConfig.AddCssVersion"/>
-    <link rel="mask-icon" href="/assets/images/govuk-icon-mask.svg" color="#0b0c0c" asp-append-version="@scriptConfig.AddCssVersion"/>
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/govuk-icon-180.png" asp-append-version="@scriptConfig.AddCssVersion"/>
-    <link rel="manifest" href="/assets/manifest.json">
+    <style asp-add-nonce="true">
+        :root {
+            --generated: '@DateTime.Today.ToString("d MMMM yyyy", DateTimeFormatInfo.InvariantInfo)' ;
+            --siteurl: '@Url.ActionLink("Homepage", "Contentful", protocol: "https")';
+        }
+    </style>
+    @if (SiteConfiguration.Rebrand)
+    {
+        <link rel="icon" sizes="48x48" href="/assets/rebrand/images/favicon.ico" asp-append-version="@scriptConfig.AddCssVersion"/>
+        <link rel="icon" sizes="any" type="image/svg+xml" href="/assets/rebrand/images/favicon.svg" asp-append-version="@scriptConfig.AddCssVersion"/>
+        <link rel="mask-icon" href="/assets/rebrand/images/govuk-icon-mask.svg" color="#0b0c0c" asp-append-version="@scriptConfig.AddCssVersion"/>
+        <link rel="apple-touch-icon" sizes="180x180" href="/assets/rebrand/images/govuk-icon-180.png" asp-append-version="@scriptConfig.AddCssVersion"/>
+        <link rel="manifest" href="/assets/rebrand/manifest.json">
+    }
+    else
+    {
+        <link rel="icon" sizes="48x48" href="/assets/images/favicon.ico" asp-append-version="@scriptConfig.AddCssVersion"/>
+        <link rel="icon" sizes="any" type="image/svg+xml" href="/assets/images/favicon.svg" asp-append-version="@scriptConfig.AddCssVersion"/>
+        <link rel="mask-icon" href="/assets/images/govuk-icon-mask.svg" color="#0b0c0c" asp-append-version="@scriptConfig.AddCssVersion"/>
+        <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/govuk-icon-180.png" asp-append-version="@scriptConfig.AddCssVersion"/>
+        <link rel="manifest" href="/assets/manifest.json">
+    }
     
     <meta name="apple-mobile-web-app-title" content="Support for care leavers" />
     
     <link rel="stylesheet" href="~/css/application.css" asp-append-version="@scriptConfig.AddCssVersion"/>
     <link rel="stylesheet" href="~/css/print.css" asp-append-version="@scriptConfig.AddCssVersion"/>
+    @if (SiteConfiguration.Rebrand)
+    {
+        <link rel="stylesheet" href="~/css/rebrand.css" asp-append-version="@scriptConfig.AddCssVersion"/>
+    }
     @if (IsSectionDefined("Head")) {
         @await RenderSectionAsync("Head", required: false)
     }
