--- a/src/web/CareLeavers.Web/Views/Shared/_PrintLayout.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/_PrintLayout.cshtml
@@ -37,7 +37,7 @@
 }
 
 <!DOCTYPE html>
-<html class="govuk-template" dir="@language.Direction" lang="@languageCode">
+<html class="@(SiteConfiguration.Rebrand ? "govuk-template--rebranded" : "govuk-template")" dir="@language.Direction" lang="@languageCode">
 
 <head>
     @if (WebHostEnvironment.IsProduction() && !string.IsNullOrEmpty(scriptConfig.GTM))
@@ -93,16 +93,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>@ViewData["Title"]</title>
 
-    <link rel="icon" sizes="48x48" href="/assets/images/favicon.ico" asp-append-version="@scriptConfig.AddCssVersion"/>
-    <link rel="icon" sizes="any" type="image/svg+xml" href="/assets/images/favicon.svg" asp-append-version="@scriptConfig.AddCssVersion"/>
-    <link rel="mask-icon" href="/assets/images/govuk-icon-mask.svg" color="#0b0c0c" asp-append-version="@scriptConfig.AddCssVersion"/>
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/govuk-icon-180.png" asp-append-version="@scriptConfig.AddCssVersion"/>
-    <link rel="manifest" href="/assets/manifest.json">
+    @if (SiteConfiguration.Rebrand)
+    {
+        <link rel="icon" sizes="48x48" href="/assets/rebrand/images/favicon.ico" asp-append-version="@scriptConfig.AddCssVersion"/>
+        <link rel="icon" sizes="any" type="image/svg+xml" href="/assets/rebrand/images/favicon.svg" asp-append-version="@scriptConfig.AddCssVersion"/>
+        <link rel="mask-icon" href="/assets/rebrand/images/govuk-icon-mask.svg" color="#0b0c0c" asp-append-version="@scriptConfig.AddCssVersion"/>
+        <link rel="apple-touch-icon" sizes="180x180" href="/assets/rebrand/images/govuk-icon-180.png" asp-append-version="@scriptConfig.AddCssVersion"/>
+        <link rel="manifest" href="/assets/rebrand/manifest.json">
+    }
+    else
+    {
+        <link rel="icon" sizes="48x48" href="/assets/images/favicon.ico" asp-append-version="@scriptConfig.AddCssVersion"/>
+        <link rel="icon" sizes="any" type="image/svg+xml" href="/assets/images/favicon.svg" asp-append-version="@scriptConfig.AddCssVersion"/>
+        <link rel="mask-icon" href="/assets/images/govuk-icon-mask.svg" color="#0b0c0c" asp-append-version="@scriptConfig.AddCssVersion"/>
+        <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/govuk-icon-180.png" asp-append-version="@scriptConfig.AddCssVersion"/>
+        <link rel="manifest" href="/assets/manifest.json">
+    }
     
     <meta name="apple-mobile-web-app-title" content="@config.ServiceName" />
     
     <link rel="stylesheet" href="~/css/application.css" asp-append-version="@scriptConfig.AddCssVersion"/>
     <link rel="stylesheet" href="~/css/collection.css" asp-append-version="@scriptConfig.AddCssVersion"/>
+    @if (SiteConfiguration.Rebrand)
+    {
+        <link rel="stylesheet" href="~/css/rebrand.css" asp-append-version="@scriptConfig.AddCssVersion"/>
+    }
     @if (IsSectionDefined("Head")) {
         @await RenderSectionAsync("Head", required: false)
     }
@@ -123,15 +138,30 @@
     document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');
 </script>
 
-<header class="dfe-width-container dfe-header__container" id="collection-header">
-    <div class="dfe-header__logo">
-        <a class="dfe-header__link dfe-header__link--service " href="~/" aria-label="@configViewModel.ContentfulConfiguration.ServiceName homepage">
-            <img src="~/assets/dfe-logo.png" class="dfe-logo" alt="@configViewModel.ContentfulConfiguration.ServiceName homepage">
-            <img src="~/assets/dfe-logo-alt.png" class="dfe-logo-hover" alt="@configViewModel.ContentfulConfiguration.ServiceName homepage">
-        </a>
-    </div>
-    <partial model="configViewModel.ContentfulConfiguration.ServiceName" name="ServiceName"></partial>
-</header>
+@if (SiteConfiguration.Rebrand)
+{
+    <header class="govuk-header" data-module="govuk-header">
+        <div class="govuk-header__container govuk-width-container">
+            <div class="govuk-header__logo">
+                <a href="/@languageCode/@configViewModel.ContentfulConfiguration.HomePage?.Slug" aria-label="@configViewModel.ContentfulConfiguration.ServiceName homepage" class="govuk-header__link govuk-header__link--homepage">
+                    <img src="/assets/department-for-education_white.png" alt="@configViewModel.ContentfulConfiguration.ServiceName homepage" class="govuk-header__logotype">
+                </a>
+            </div>
+        </div>
+    </header>
+}
+else
+{
+    <header class="dfe-width-container dfe-header__container" id="collection-header">
+        <div class="dfe-header__logo">
+            <a class="dfe-header__link dfe-header__link--service " href="/@languageCode/@configViewModel.ContentfulConfiguration.HomePage?.Slug" aria-label="@configViewModel.ContentfulConfiguration.ServiceName homepage">
+                <img src="~/assets/dfe-logo.png" class="dfe-logo" alt="@configViewModel.ContentfulConfiguration.ServiceName homepage">
+                <img src="~/assets/dfe-logo-alt.png" class="dfe-logo-hover" alt="@configViewModel.ContentfulConfiguration.ServiceName homepage">
+            </a>
+        </div>
+        <partial model="configViewModel.ContentfulConfiguration.ServiceName" name="ServiceName"></partial>
+    </header>
+}
 
 <table>
     <thead>
