--- a/src/web/CareLeavers.Web/Views/Pages/CookiePolicy.cshtml
+++ b/src/web/CareLeavers.Web/Views/Pages/CookiePolicy.cshtml
@@ -194,23 +194,23 @@
 <hr class="govuk-section-break govuk-section-break--l g" />
 @using (Html.BeginForm("PostCookiePolicy", "Pages", method: FormMethod.Post, htmlAttributes: new { @class = "govuk-form" }, routeValues: new { languageCode }, antiforgery: true ))
 {
-    <fieldset class="govuk-fieldset">
-        <div class="govuk-form-group">
+    <div class="govuk-form-group">
+        <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-                Do you want to use cookies that measure your website use?
+                Do you want to accept analytics cookies?
             </legend>
             <div class="govuk-radios" data-module="govuk-radios">
                 <div class="govuk-radios__item">
                     @Html.RadioButtonFor(x => x.AcceptCookies, true, new { @class = "govuk-radios__input", id = "analytics-cookies-on" })
-                    @Html.LabelFor(x => x.AcceptCookies, "Yes", new { @class = "govuk-label govuk-radios__label"})
+                    @Html.LabelFor(x => x.AcceptCookies, "Yes", new { @class = "govuk-label govuk-radios__label", @for="analytics-cookies-on"})
                 </div>
 
                 <div class="govuk-radios__item">
                     @Html.RadioButtonFor(x => x.AcceptCookies, false, new { @class = "govuk-radios__input", id = "analytics-cookies-off" })
-                    @Html.LabelFor(x => x.AcceptCookies, "No", new { @class = "govuk-label govuk-radios__label"})
+                    @Html.LabelFor(x => x.AcceptCookies, "No", new { @class = "govuk-label govuk-radios__label", @for="analytics-cookies-off"})
                 </div>
             </div>
-        </div>
-    </fieldset>
-    <button class="govuk-button" type="submit">Save changes</button>
+        </fieldset>
+    </div>
+    <button class="govuk-button" type="submit" data-module="govuk-button">Save cookie settings</button>
 }
