CARE-1156 Added external link support to the Card component
Changed the links and related title/description component to cards (a specified in the issue)

--- a/src/web/CareLeavers.Web/Views/Shared/Grid/Card.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/Grid/Card.cshtml
@@ -18,9 +18,12 @@
             link = LinkGenerator.GetPathByAction("DownloadPdf", "Print", values: new { identifier, languageCode });
             rel = "nofollow";
             break;
-        
     }
-    
+
+    if (!string.IsNullOrEmpty(Model.ExternalLink))
+    {
+        link = Model.ExternalLink;
+    }
 }
 
 <div class="dfe-card">
